# api/application.py
@@ -27,34 +27,34 @@ import secrets
 #       # Implied operationId: api.foo.delete
 
 
-# user, injected by connexion auth handling is actually a client_id here
+# user, injected by connexion auth handling is actually a client object here
 
 def search(user):
-    client_id = user
-    return jsonify([a.as_response() for a in Application.query.filter_by(client_id=client_id)])
+    client = user
+    return jsonify([a.as_dict() for a in Application.query.filter_by(client=client)])
 
 
 def post(body, user):
-    client_id = user
+    client = user
     name = body['name']
     while True:
         token = secrets.token_urlsafe(20)
         if not Application.query.filter_by(routing_token=token).one_or_none():
             break
-    app = Application(name=name, client_id=client_id, routing_token=token)
+    app = Application(name=name, client=client, routing_token=token)
     try:
         db.session.add(app)
         db.session.commit()
     except SQLAlchemyError as e:
         print(str(e))
         return NoContent, 400
-    return jsonify(app.as_response()), 201
+    return jsonify(app.as_dict()), 201
 
 
 def delete(id, user):
-    client_id = user
+    client = user
     try:
-        db.session.delete(Application.query.filter_by(id=id, client_id=client_id).one())
+        db.session.delete(Application.query.filter_by(id=id, client=client).one())
         db.session.commit()
     except NoResultFound:
         return NoContent, 404
